@@ -1,3 +1,11 @@
+2012-07-05  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.5.2 Released.
+
+	* AST-2012-010
+
+	* AST-2012-011
+
 2012-06-14  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.5.1 Released.
